Use JDK17 Format (#127)
Reviewed by @chanhyeong